--- a/Projekt IIS.html
+++ b/Projekt IIS.html
@@ -16,11 +16,11 @@
 
 <dl>
 	<dt>Autoøi</dt>
-	<dd>Jakub Komárek <a href="mailto:xkomar33@stud.fit.vutbr.cz">xkomar33@stud.fit.vutbr.cz</a> - backend, nasazení systému
+	<dd>Jakub Komárek <a href="mailto:xkomar33@stud.fit.vutbr.cz">xkomar33@stud.fit.vutbr.cz</a> - nasazení systému,  backend leader
 	</dd>
-	<dd>Druhé jméno  <a href="mailto:xautor02@stud.fit.vutbr.cz">xautor02@stud.fit.vutbr.cz</a> - implementace databáze, frontend
+	<dd>Matu¹ík Adrián  <a href="mailto:xautor02@stud.fit.vutbr.cz">xmatus35@stud.fit.vutbr.cz</a> - implementace databáze, frontend leader
 	</dd>
-  <dd>Tøetí jméno  <a href="mailto:xautor03@stud.fit.vutbr.cz">xautor03@stud.fit.vutbr.cz</a> - návrh databáze, výpomoc pøi frontendu, testování
+  	<dd> Martin Studený  <a href="mailto:xautor03@stud.fit.vutbr.cz">xstude24@stud.fit.vutbr.cz</a> - návrh systému, návrh databáze, testování
 	</dd>
 	<dt>URL aplikace</dt>
 	<dd><a href="http://www.komarnet.cz/www/">http://www.komarnet.cz/www/</a></dd>
@@ -74,10 +74,19 @@
  
 <ul>
 <li>postup instalace na server:</li>
+varianta a:
 <ol>
+	<li>Sta¾ení knihoven nette, nejlépe ve verzi 3.1. Umístìní knihoven do slo¾ky vendor</li>
 	<li>Pøekopírovat obsah adresáøe do /var/www/ (umístìní pro apache2 - mù¾e se na va¹í stanici li¹it).</li>
 	<li>V souboru app/config/local.neon zeditovat pøihlá¹ovací údaje k databázy.</li>
-	<li>Správnì nakonfigurovat Apache2. Na hostigu ovykle není poteøeba</li>
+	<li>Správnì nakonfigurovat Apache2. Na hostigu obvykle není potøeba</li>
+</ol>
+varianta b: 
+<ol>
+	<li>sta¾ení adresáøe s knihovnami z <a href="https://ulozto.cz/file/Jnc7mVN9PjHj/iis-xkomar33-zip#">https://ulozto.cz/file/Jnc7mVN9PjHj/iis-xkomar33-zip#</a> (heslo: kaktuskaktus)</li>
+	<li>Pøekopírovat obsah adresáøe do /var/www/ (umístìní pro apache2 - mù¾e se na va¹í stanici li¹it).</li>
+	<li>V souboru app/config/local.neon zeditovat pøihlá¹ovací údaje k databázy.</li>
+	<li>Správnì nakonfigurovat Apache2. Na hostigu obvykle není potøeba</li>
 </ol>
 <li>softwarové po¾adavky:</li>
 <ul>
